--- a/app/views/factory/admin/products/_actions.html.erb
+++ b/app/views/factory/admin/products/_actions.html.erb
@@ -4,6 +4,8 @@
 <% end %>
 <%= link_to({ controller: 'productions', product_id: model.id }, class: 'cell has-column-centered') do %>
   <i class="fa-regular fa-clone"></i>
-  <span><%= model.productions_count %></span>
-  <span><%= t('factory.admin.productions.index.title') %></span>
+  <div>
+    <span><%= t('factory.admin.productions.index.title') %></span>
+    <span class="tag"><%= model.productions_count %></span>
+  </div>
 <% end %>
