--- a/app/views/factory/admin/productions/_actions.html.erb
+++ b/app/views/factory/admin/productions/_actions.html.erb
@@ -3,14 +3,18 @@
   <span><%= t('.edit.title') %></span>
 <% end %>
 <%= link_to({ controller: 'production_plans', production_id: model.id }, class: 'cell has-column-centered') do %>
-  <i class="fa-solid fa-list-timeline"></i>
-  <span><%= t('factory.admin.production_plans.index.title') %></span>
+  <i class="fa-solid fa-clock"></i>
+  <span><%= t('.production_plans.index.title') %></span>
 <% end %>
-<%= button_to({ action: 'update', id: model.id }, method: :patch, params: { '[production]default': !model.default }, class: model.default ? 'text-danger' : 'text-success', form: { class: 'cell' }) do %>
+<%= link_to({ controller: 'production_items', production_id: model.id }, class: 'cell has-column-centered') do %>
+  <i class="fa-solid fa-list"></i>
+  <span><%= t('.production_items.index.title') %></span>
+<% end %>
+<%= button_to({ action: 'update', id: model.id }, method: :patch, params: { '[production]default': !model.default }, class: model.default ? 'text-danger has-column-centered' : 'text-success has-column-centered', form: { class: 'cell' }) do %>
   <i class="fa-solid fa-check"></i>
   <span>主显产品</span>
 <% end %>
-<%= button_to({ action: 'update', id: model.id }, method: :patch, params: { '[production]enabled': !model.enabled }, class: model.enabled ? 'text-danger' : 'text-success', form: { class: 'cell' }) do %>
+<%= button_to({ action: 'update', id: model.id }, method: :patch, params: { '[production]enabled': !model.enabled }, class: model.enabled ? 'text-danger has-column-centered' : 'text-success has-column-centered', form: { class: 'cell' }) do %>
   <i class="fa-solid fa-check"></i>
   <span>上架</span>
 <% end %>
