--- a/app/views/factory/productions/_show/_tab_bar.html.erb
+++ b/app/views/factory/productions/_show/_tab_bar.html.erb
@@ -2,7 +2,7 @@
   <div class="level-left p-3">
     <%= link_to({ controller: 'trade/my/carts', action: 'show', id: @cart.id }, class: 'has-column-centered') do %>
       <div class="fa-weui-badge">
-        <i class="fa-solid fa-cart-shopping size-5"></i>
+        <i class="fa-solid fa-fw fa-xl fa-cart-shopping"></i>
         <span class="weui-badge"><%= @cart.items.count %></span>
       </div>
       <span class="size-7 text-grey"><%= t('trade.my.carts.show.title') %></span>
