--- a/app/views/factory/productions/show.html+phone.erb
+++ b/app/views/factory/productions/show.html+phone.erb
@@ -8,7 +8,7 @@
 </div>
 
 <div class="box is-border" style="z-index: 3">
-  <div class="weui-panel__hd">
+  <div class="p-4">
     <div><%= @production.name %></div>
     <% unless @production.presell %>
     <div class="has-inline-centered mt-1">
@@ -29,7 +29,7 @@
     </div>
     <% end %>
   </div>
-  <div class="weui-panel__bd p-4">
+  <div class="p-4">
     <% @production.production_provides.each do |upstream| %>
       <p>
         <span>供应商：</span>
