--- a/app/views/factory/productions/_base/_component.html.erb
+++ b/app/views/factory/productions/_base/_component.html.erb
@@ -4,19 +4,6 @@
     <span class="size-7"><%= component.select_str %></span>
   </strong>
   <div data-controller="custom" data-custom-only-value="<%= component.only_one? %>" class="buttons are-small no-disabled pt-4">
-  <% component_parts.each do |component_part| %>
-    <label class="button <%= @production.part_ids.include?(component_part.part_id) ? 'is-success' : 'is-light' %>" for="part_<%= component_part.part_id %>"<%= component.disabled?(@production.part_ids, component_part.part_id) ? ' disabled' : '' %>>
-      <span><%= component_part.part.name %></span>
-      <% if component_part.part.price.to_d > 0 %>
-        <span class="ml-1"><%= component_part.part.price.to_money.format.html_safe %></span>
-      <% end %>
-      <% if component.cancelable?(@production.part_ids, component_part.part_id) %>
-        <i class="fa-solid fa-xmark ml-1"></i>
-      <% end %>
-      <%= hidden_field_tag 'production_parts_attributes[][component_id]', component_part.component_id, form: 'edit_custom', id: nil %>
-      <%= hidden_field_tag 'production_parts_attributes[][part_id]', component_part.part_id, form: 'edit_custom', data: { part_taxon_id: component_part.part.taxon_id }, id: nil if @production.part_ids.include?(component_part.part_id) && component.disabled?(@production.part_ids, component_part.part_id) %>
-      <%= check_box_tag 'production_parts_attributes[][part_id]', component_part.part_id, @production.part_ids.include?(component_part.part_id), disabled: component.disabled?(@production.part_ids, component_part.part_id), data: { action: 'custom#toggle', part_taxon_id: component.part_taxon_id }, class: 'weui-check display-none', id: "part_#{component_part.part_id}", form: 'edit_custom' %>
-    </label>
-  <% end %>
+    <%= render partial: 'component_part', collection: component_parts, as: :component_part, locals: { component: component } %>
   </div>
 </div>
