--- a/app/views/factory/admin/component_parts/_base/_index_thead.html.erb
+++ b/app/views/factory/admin/component_parts/_base/_index_thead.html.erb
@@ -1,4 +1,6 @@
 <th><%= Factory::ComponentPart.human_attribute_name(:part_id) %></th>
 <th><%= Factory::ComponentPart.human_attribute_name('part.price') %></th>
 <th><%= Factory::ComponentPart.human_attribute_name(:default) %></th>
+<th><%= Factory::ComponentPart.human_attribute_name(:min) %></th>
+<th><%= Factory::ComponentPart.human_attribute_name(:max) %></th>
 <th></th>
