--- a/app/views/factory/admin/taxon_components/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/taxon_components/_base/_index_tbody.html.erb
@@ -5,6 +5,12 @@
   <p><%= model.max_select %></p>
 </td>
 <td class="text-grey"><%= model.select_str %></td>
+<td>
+  <%= form_with theme: nil, model: model, url: { action: 'update', id: model.id }, data: { controller: 'input' } do |f| %>
+    <%= f.check_box :multiple, data: { input_target: 'checkbox' }, id: nil, class: 'switch is-rounded' %>
+    <label data-action="click->input#check"></label>
+  <% end %>
+</td>
 <td><%= link_to model.component_parts_count, { controller: 'component_parts', component_id: model.id } %></td>
 <td>
 <% model.component_parts.each do |product_part| %>
