--- a/app/views/factory/admin/taxon_components/_base/_index_thead.html.erb
+++ b/app/views/factory/admin/taxon_components/_base/_index_thead.html.erb
@@ -5,5 +5,6 @@
   <p><%= Factory::ProductComponent.human_attribute_name(:max_select) %></p>
 </th>
 <th><%= Factory::ProductComponent.human_attribute_name(:select_str) %></th>
+<th><%= Factory::ProductComponent.human_attribute_name(:multiple) %></th>
 <th><%= Factory::ProductComponent.human_attribute_name(:product_parts_count) %></th>
 <th style="width: 30%"></th>
