--- a/app/views/factory/admin/component_parts/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/component_parts/_base/_index_tbody.html.erb
@@ -6,6 +6,8 @@
     <label data-action="click->input#check"></label>
   <% end %>
 </td>
+<td><%= model.min %></td>
+<td><%= model.max %></td>
 <td>
   <%= button_to({ action: 'destroy', id: model.id }, method: :delete, form: { data: { turbo_confirm: t('.destroy.confirm') } }, class: 'button is-small is-rounded is-light') do %>
     <i class="fa-solid fa-trash text-danger"></i>
