--- a/app/views/factory/productions/_base/_component.html.erb
+++ b/app/views/factory/productions/_base/_component.html.erb
@@ -4,6 +4,10 @@
     <span class="size-7"><%= component.select_str %></span>
   </strong>
   <div data-controller="custom" data-custom-only-value="<%= component.only_one? %>" class="buttons are-small no-disabled pt-4">
+  <% if component.multiple %>
+    <%= render partial: 'component_part_number', collection: component_parts, as: :component_part, locals: { component: component } %>
+  <% else %>
     <%= render partial: 'component_part', collection: component_parts, as: :component_part, locals: { component: component } %>
+  <% end %>
   </div>
 </div>
