--- a/app/views/factory/productions/_base/_component_part.html.erb
+++ b/app/views/factory/productions/_base/_component_part.html.erb
@@ -1,7 +1,7 @@
 <label class="button <%= @production.part_ids.include?(component_part.part_id) ? 'is-success' : 'is-light' %>" for="part_<%= component_part.part_id %>"<%= component.disabled?(@production.part_ids, component_part.part_id) ? ' disabled' : '' %>>
   <span><%= component_part.part.name %></span>
   <% if component_part.part.price.to_d > 0 %>
-    <span class="ml-1"><%= component_part.part.price.to_money.format.html_safe %></span>
+    <span class="ml-1 text-danger"><%= component_part.part.price.to_money.format.html_safe %></span>
   <% end %>
   <% if component.cancelable?(@production.part_ids, component_part.part_id) %>
     <i class="fa-solid fa-xmark ml-1"></i>
