--- a/app/views/factory/productions/_base/_component_part_number.html.erb
+++ b/app/views/factory/productions/_base/_component_part_number.html.erb
@@ -2,10 +2,7 @@
   <div>
     <span><%= component_part.part.name %></span>
     <% if component_part.part.price.to_d > 0 %>
-      <span class="ml-1"><%= component_part.part.price.to_money.format.html_safe %></span>
-    <% end %>
-    <% if component.cancelable?(@production.part_ids, component_part.part_id) %>
-      <i class="fa-solid fa-xmark ml-1"></i>
+      <span class="ml-1 text-danger"><%= component_part.part.price.to_money.format.html_safe %></span>
     <% end %>
     <%= hidden_field_tag 'production_parts_attributes[][component_id]', component_part.component_id, form: 'edit_custom', id: nil %>
     <%= hidden_field_tag 'production_parts_attributes[][part_id]', component_part.part_id, form: 'edit_custom', data: { part_taxon_id: component_part.part.taxon_id }, id: nil if @production.part_ids.include?(component_part.part_id) && component.disabled?(@production.part_ids, component_part.part_id) %>
