--- a/app/views/factory/productions/_base/_component_part_number.html.erb
+++ b/app/views/factory/productions/_base/_component_part_number.html.erb
@@ -18,7 +18,7 @@
       <i class="fa-solid fa-xl fa-plus text-grey"></i>
     </button>
   <% else %>
-    <button data-action="modify#plus" class="button_to ml-1">
+    <button data-action="modify#plus" class="button_to">
       <i class="fa-solid fa-xl fa-plus text-grey"></i>
     </button>
   <% end %>
