--- a/app/views/factory/productions/_base/_component_part_number.html.erb
+++ b/app/views/factory/productions/_base/_component_part_number.html.erb
@@ -8,10 +8,17 @@
   </div>
   <div>
   <% if @production.part_ids.include?(component_part.part_id) %>
-    <button data-action="modify#minus" class="button_to mr-1">
-      <i class="fa-solid fa-xl fa-minus text-grey"></i>
-    </button>
-    <%= hidden_field_tag 'production_parts_attributes[][part_id]', component_part.part_id, form: 'edit_custom', id: nil %>
+    <% if @production.parts_hash[component_part.part_id].number > 1 %>
+      <button data-action="modify#minus" class="button_to mr-1">
+        <i class="fa-solid fa-xl fa-minus text-grey"></i>
+      </button>
+      <%= hidden_field_tag 'production_parts_attributes[][part_id]', component_part.part_id, form: 'edit_custom', id: nil %>
+    <% else %>
+      <label class="button_to">
+        <i class="fa-solid fa-xl fa-minus text-grey"></i>
+        <%= check_box_tag 'production_parts_attributes[][part_id]', component_part.part_id, true, disabled: component.disabled?(@production.part_ids, component_part.part_id), data: { action: 'custom#toggle', part_taxon_id: component.part_taxon_id }, id: nil, class: 'display-none', form: 'edit_custom' %>
+      </label>
+    <% end %>
     <%= number_field_tag 'production_parts_attributes[][number]', @production.parts_hash[component_part.part_id].number, data: { action: 'change->input#form focus->input#blank', modify_target: 'input' }, form: 'edit_custom', class: 'text-centered', style: 'width: 3rem' %>
     <button data-action="modify#plus" class="button_to ml-1">
       <i class="fa-solid fa-xl fa-plus text-grey"></i>
