--- a/app/views/factory/admin/home/_index/_index_column.html.erb
+++ b/app/views/factory/admin/home/_index/_index_column.html.erb
@@ -17,5 +17,8 @@
     <%= link_to({ controller: 'provides' }, class: 'cell button is-fullwidth') do %>
       <span><%= t('.provides.index.title') %></span>
     <% end %>
+    <%= link_to({ controller: 'brands' }, class: 'cell button is-fullwidth') do %>
+      <span><%= t('.brands.index.title') %></span>
+    <% end %>
   </div>
 </div>
