--- a/app/views/factory/admin/taxon/products/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/taxon/products/_base/_index_tbody.html.erb
@@ -1,10 +1,13 @@
 <td>
   <div class="is-several">
-    <%= image_tag model.logo.url, class: 'image is-32x32' if model.logo.attached? %>
+    <%= image_tag model.logo.url, class: 'image is-24x24' if model.logo.attached? %>
     <%= link_to({ controller: 'productions', product_id: model.id }, text: true) do %>
       <span><%= model.name %></span>
     <% end %>
   </div>
+  <% if model.brand %>
+    <p><span class="tag is-danger is-light"><%= model.brand.name %></span></p>
+  <% end %>
 </td>
 <td><%= model.base_price.to_money.format.html_safe %></td>
 <td>
