--- a/app/views/factory/productions/_base/_component.html.erb
+++ b/app/views/factory/productions/_base/_component.html.erb
@@ -1,4 +1,4 @@
-<div data-id="<%= component.id %>" class="box mt-3">
+<div data-id="<%= component.id %>" class="box">
   <strong>
     <span><%= component.name %></span>
     <span class="size-7"><%= component.select_str %></span>
