--- a/app/views/admin/_factory_simple_nav.html.erb
+++ b/app/views/admin/_factory_simple_nav.html.erb
@@ -1,4 +1,4 @@
-<div data-controller="menu empty" class="<%= active_helper(modules: ['factory/admin', 'factory/in'], active: 'menu ex-accordion is-active', item: 'menu ex-accordion is-active') %>">
+<div data-controller="menu" class="<%= role_permit?(business: 'factory', namespace: 'admin') ? 'menu ex-accordion is-active' : 'display-none' %>">
   <div class="menu-label">
     <div>
       <i class="fa-solid fa-fw fa-store"></i>
@@ -8,7 +8,7 @@
       <i class="fa-solid fa-cog"></i>
     <% end %>
   </div>
-  <div data-empty-target="content" class="menu-list">
+  <div class="menu-list">
     <%= link_to t('factory.admin.taxons.index.title'), { controller: 'factory/admin/taxons' }, data: { turbo_frame: 'body', action: 'menu#enter' }, class: active_helper(controllers: ['taxon/products', 'taxons', 'taxon_components', 'productions', 'part_providers', 'production_plans', 'production_items'], active: 'is-active') %>
     <%= link_to t('factory.admin.products.index.title'), { controller: 'factory/admin/products' }, data: { turbo_frame: 'body', action: 'menu#enter' }, class: active_helper(controllers: ['products', 'taxons', 'taxon_components', 'productions', 'part_providers', 'production_plans', 'production_items'], active: 'is-active') %>
     <%= link_to t('factory.admin.produce_on.index.title'), { controller: 'factory/admin/produce_on' }, data: { turbo_frame: 'body', action: 'menu#enter' }, class: active_helper(controllers: 'produce_on', active: 'is-active') %>
