--- a/app/views/factory/admin/production_items/_actions.html+phone.erb
+++ b/app/views/factory/admin/production_items/_actions.html+phone.erb
@@ -8,7 +8,7 @@
 <% end %>
 <div
   data-controller="mini-program"
-  data-mini-program-url-value="plugin://bluetooth/print"
+  data-mini-program-url-value="/pages/print/index"
   data-mini-program-data-value="<%= { url: url_for(action: 'print_data', id: model.id, only_path: false) }.to_json %>"
   data-action="click->mini-program#link"
   class="cell has-column-centered"
