--- a/app/views/admin/_factory_nav.html+phone.erb
+++ b/app/views/admin/_factory_nav.html+phone.erb
@@ -1,4 +1,5 @@
-<div data-controller="empty" class="box is-padding-less mx-3">
+<% if role_permit?(business: 'factory', namespace: 'admin') %>
+<div class="box is-padding-less mx-3">
   <div class="box-header">
     <div>
       <span class="size-7 has-border-left-primary"><%= t('factory.admin.title') %></span>
@@ -8,12 +9,12 @@
       <span>预览商店</span>
     <% end %>
   </div>
-  <div class="columns is-4-mobile flex is-vcentered is-centered m-0 is-shadow" data-empty-target="content">
-    <%= link_to({ controller: 'factory/admin/taxons' }, class: 'column has-column-centered') do %>
+  <div class="columns is-4-mobile flex is-vcentered is-centered m-0 is-shadow">
+    <%= link_to({ controller: 'factory/admin/products' }, class: 'column has-column-centered') do %>
       <div class="text-primary">
         <i class="fa-solid fa-fw fa-xl fa-folder-tree"></i>
       </div>
-      <div class="text-grey size-7 mt-1"><%= t('factory.admin.taxons.index.title') %></div>
+      <div class="text-grey size-7 mt-1"><%= t('factory.admin.products.index.title') %></div>
     <% end %>
     <%= link_to({ controller: 'factory/admin/scenes' }, class: 'column has-column-centered') do %>
       <div class="text-primary">
@@ -29,3 +30,4 @@
     <% end %>
   </div>
 </div>
+<% end %>
