--- a/app/views/factory/admin/home/_index_item.html.erb
+++ b/app/views/factory/admin/home/_index_item.html.erb
@@ -1,33 +1,33 @@
-<%= link_to({ controller: 'factory/admin/taxons' }, class: 'media') do %>
+<%= link_to({ controller: 'taxons' }, class: 'media') do %>
   <div class="media-content">
-    <i class="fa-regular fa-gift-card fa-fw text-warning"></i>
+    <i class="fa-solid fa-gift-card fa-fw text-warning"></i>
     <span><%= t('factory.admin.taxons.index.title') %></span>
   </div>
   <div class="media-right">
     <i class="fa-solid fa-chevron-right"></i>
   </div>
 <% end %>
-<%= link_to({ controller: 'factory/admin/parts' }, class: 'media') do %>
+<%= link_to({ controller: 'products' }, class: 'media') do %>
   <div class="media-content">
-    <i class="fa-regular fa-gift-card fa-fw text-warning"></i>
-    <span><%= t('factory.admin.parts.index.title') %></span>
+    <i class="fa-solid fa-gift-card fa-fw text-warning"></i>
+    <span><%= t('factory.admin.products.index.title') %></span>
   </div>
   <div class="media-right">
     <i class="fa-solid fa-chevron-right"></i>
   </div>
 <% end %>
-<%= link_to({ controller: 'factory/admin/scenes' }, class: 'media') do %>
+<%= link_to({ controller: 'scenes' }, class: 'media') do %>
   <div class="media-content">
-    <i class="fa-regular fa-gift-card fa-fw text-warning"></i>
+    <i class="fa-solid fa-gift-card fa-fw text-warning"></i>
     <span><%= t('factory.admin.scenes.index.title') %></span>
   </div>
   <div class="media-right">
     <i class="fa-solid fa-chevron-right"></i>
   </div>
 <% end %>
-<%= link_to({ controller: 'factory/admin/factory_taxons' }, class: 'media') do %>
+<%= link_to({ controller: 'taxons' }, class: 'media') do %>
   <div class="media-content">
-    <i class="fa-regular fa-gift-card fa-fw text-warning"></i>
+    <i class="fa-solid fa-gift-card fa-fw text-warning"></i>
     <span><%= t('factory.admin.factory_taxons.index.title') %></span>
   </div>
   <div class="media-right">
