--- a/app/views/factory/admin/products/_actions.html.erb
+++ b/app/views/factory/admin/products/_actions.html.erb
@@ -3,7 +3,7 @@
   <span><%= t('.edit.title') %></span>
 <% end %>
 <%= link_to({ controller: 'productions', product_id: model.id }, class: 'cell has-column-centered') do %>
-  <i class="fa-regular fa-clone"></i>
+  <i class="fa-solid fa-clone"></i>
   <div>
     <span><%= t('factory.admin.productions.index.title') %></span>
     <span class="tag"><%= model.productions_count %></span>
