--- a/app/views/factory/admin/products/show.html+phone.erb
+++ b/app/views/factory/admin/products/show.html+phone.erb
@@ -1,5 +1,7 @@
 <%= render partial: 'show' %>
 
-<div class="box mx-3">
-  <%= render partial: 'actions', locals: { model: @product } %>
+<div class="fixed-grid has-3-cols is-boxed mx-3 p-3">
+  <div class="grid gap-2 as-actions">
+    <%= render partial: 'actions', locals: { model: @product } %>
+  </div>
 </div>
