--- a/app/views/factory/admin/productions/_index/_index_item.html+phone.erb
+++ b/app/views/factory/admin/productions/_index/_index_item.html+phone.erb
@@ -1,5 +1,5 @@
-<p class="weui-media-box__desc">
-  <span><%= model.name %></span>
+<p class="">
+  <span><%= model.title %></span>
   <span class="tag"><%= model.state_i18n %></span>
 </p>
 <div class="mt-1 flex">
