--- a/app/views/factory/admin/production_items/_actions.html+phone.erb
+++ b/app/views/factory/admin/production_items/_actions.html+phone.erb
@@ -2,7 +2,7 @@
   <i class="fa-solid fa-pencil"></i>
   <span><%= t('.edit.title') %></span>
 <% end %>
-<%= button_to({ action: 'destroy', id: model.id }, method: :delete, class: 'text-danger', form: { turbo_confirm: t('.destroy.confirm'), class: 'cell has-column-centered' }) do %>
+<%= button_to({ action: 'destroy', id: model.id }, method: :delete, class: 'text-danger', form: { turbo_confirm: t('.destroy.confirm') }, class: 'cell has-column-centered') do %>
   <i class="fa-solid fa-trash"></i>
   <span><%= t('.destroy.title') %></span>
 <% end %>
@@ -12,9 +12,9 @@
   data-mini-program-url-value="/pages/print/index"
   data-mini-program-data-value="<%= { url: url_for(action: 'print_data', id: model.id, only_path: false) }.to_json %>"
   data-action="click->mini-program#link"
-  class="cell has-column-centered"
+  class="cell"
 >
-  <%= button_to({ action: 'print', id: model.id }, method: :patch, class: 'text-primary') do %>
+  <%= button_to({ action: 'print', id: model.id }, method: :patch, class: 'has-column-centered') do %>
     <i class="fa-solid fa-print"></i>
     <span><%= t('factory.admin.production_items.print.title') %></span>
   <% end %>
