--- a/app/views/factory/admin/products/_new_modal_form.html.erb
+++ b/app/views/factory/admin/products/_new_modal_form.html.erb
@@ -2,7 +2,7 @@
   <%= render 'modal_header' %>
   <section class="modal-card-body">
     <%= render 'error_messages', target: f.object %>
-    <%= f.collection_select :taxon_id, @taxons, :id, :name %>
+    <%= f.collection_select :taxon_id, @taxons, :id, :name if @taxons.present? %>
     <%= render partial: 'form', locals: { f: f } %>
   </section>
   <%= f.submit %>
