--- a/app/views/factory/our/carts/_index/_organ.html.erb
+++ b/app/views/factory/our/carts/_index/_organ.html.erb
@@ -1,5 +1,5 @@
 <div class="media">
-  <div data-controller="empty" class="media-left">
+  <div class="media-left">
     <%= image_tag provider[0].logo.variant(resize_to_limit: [150, 150]), class: 'image is-64x64' if provider[0].logo.attached? %>
   </div>
   <div class="media-content">
