--- a/app/views/factory/mem/produce_plans/index.html+phone.erb
+++ b/app/views/factory/mem/produce_plans/index.html+phone.erb
@@ -1,6 +1,6 @@
 
 <% @produce_plans.each do |produce_on, produce_plans| %>
-<div class="weui-panel">
+<div class="box is-padding-less mx-3">
   <div class="weui-panel__hd">
     <span><%= extra_distance_date(produce_on) %></span>
     <span class="text-weight-normal text-grey size-7"><%= produce_on %></span>
