--- a/app/views/application/_produce_plan.html.erb
+++ b/app/views/application/_produce_plan.html.erb
@@ -1,4 +1,4 @@
-<div class="weui-panel is-box is-borderless mt-3">
+<div class="box is-padding-less mx-3 mt-3">
   <div class="weui-panel__hd">预定</div>
   <div class="weui-panel__bd">
     <div class="level is-mobile justify-content-space-between px-4 my-4">
