--- a/app/views/factory/admin/home/index.html+phone.erb
+++ b/app/views/factory/admin/home/index.html+phone.erb
@@ -1,4 +1,4 @@
-<div class="weui-panel is-borderless">
+<div class="box is-padding-less mx-3">
   <div class="weui-panel__hd">
     <%= t('factory.admin.title') %>
   </div>
