--- a/app/views/factory/me/production_items/qrcode.html.erb
+++ b/app/views/factory/me/production_items/qrcode.html.erb
@@ -1,4 +1,4 @@
-<div class="weui-panel">
+<div class="box is-padding-less mx-3">
   <div class="weui-panel__hd">产品明细</div>
   <div class="weui-panel__bd">
     <%= render 'production_item' %>
