--- a/app/views/factory/admin/productions/show.html+phone.erb
+++ b/app/views/factory/admin/productions/show.html+phone.erb
@@ -2,6 +2,6 @@
 
 <div class="fixed-grid has-3-cols is-boxed mx-3 p-3">
   <div class="grid gap-2 as-actions">
-    <%= render partial: 'actions', locals: { model: @product } %>
+    <%= render partial: 'actions', locals: { model: @production } %>
   </div>
 </div>
