--- a/app/views/factory/admin/component_parts/_index/_product_table.html.erb
+++ b/app/views/factory/admin/component_parts/_index/_product_table.html.erb
@@ -5,7 +5,7 @@
       <%= render 'index_thead_actions' %>
     </tr>
   </thead>
-  <tbody id="tbody">
+  <tbody>
     <%= yield %>
   </tbody>
 </table>
