--- a/app/views/factory/admin/component_parts/_index/_production_tr.html.erb
+++ b/app/views/factory/admin/component_parts/_index/_production_tr.html.erb
@@ -1,4 +1,4 @@
-<tr id="tr_<%= model.product_id %>_<%= model.id %>" data-controller="show" data-action="mouseenter->show#show mouseleave->show#hide">
+<tr id="production_<%= model.product_id %>_<%= model.id %>" data-controller="show" data-action="mouseenter->show#show mouseleave->show#hide">
   <%= yield %>
   <td>
     <div data-show-target="item" class="visibility-hidden">
