--- a/app/views/factory/admin/product_components/_new_modal_form.html.erb
+++ b/app/views/factory/admin/product_components/_new_modal_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_with theme: 'modal', model: @product_component, url: { action: 'create' }, data: { controller: 'equal' } do |f| %>
-  <%= render 'modal_header' %>>
+  <%= render 'modal_header' %>
   <section class="modal-card-body">
     <%= render 'error_messages', target: f.object %>
     <%= f.text_field :name %>
