--- a/app/views/application/_production_cart.html.erb
+++ b/app/views/application/_production_cart.html.erb
@@ -1,4 +1,4 @@
-<div id="product_cart_<%= model.product_id %>" class="level fa-weui-badge">
+<div id="product_cart_<%= model.product_id %>" class="level right-badge">
 <% if model.product.productions_count > 1 || model.product.product_parts_count > 0 || model.taxon&.taxon_components_count.to_i > 0 %>
   <% items = cart&.find_items(model.product.production_ids, dispatch: params[:dispatch].presence || current_organ.dispatch, **params.permit(:produce_on, :scene_id)) %>
   <%= button_to({ controller: defined?(productions_con) ? productions_con : controller_path, action: 'show', id: model.id }, params: { dispatch: params[:dispatch].presence || current_organ.dispatch }, class: 'button is-small is-rounded is-primary') do %>
