--- a/app/views/application/_product_summary.html.erb
+++ b/app/views/application/_product_summary.html.erb
@@ -1,17 +1,20 @@
-<table id="product_summary_<%= production.product_id %>" class="table is-embed align-self-flex-start text-grey">
+<table id="product_summary_<%= production.product_id %>" class="table is-embed is-fullwidth align-self-flex-start text-grey">
 <% cart.find_items(production.brother_ids, good_type: production.base_class_name, **options).each do |item| %>
   <tr data-id="<%= item.id %>">
     <td><%= item.good.name %></td>
     <td>
       <ul class="media-info display-inline-flex">
-        <% item.good.parts.group_by(&->(i){ i.taxon_id }).each do |_, parts| %>
-          <% parts.each_with_index do |part, _| %>
-            <li><%= part.name %></li>
-          <% end %>
+        <% item.good.production_parts.includes(:part).each do |production_part| %>
+          <li>
+            <span><%= production_part.part.name %></span>
+            <% if production_part.number.to_i >= 1 %>
+              <span>(<%= production_part.number %>)</span>
+            <% end %>
+          </li>
         <% end %>
       </ul>
     </td>
-    <td><%= item.number.to_human %></td>
+    <td class="text-right"><%= item.number.to_human %></td>
   </tr>
 <% end %>
 </table>
