--- a/app/views/application/_product_summary.html.erb
+++ b/app/views/application/_product_summary.html.erb
@@ -1,7 +1,14 @@
 <table id="product_summary_<%= production.product_id %>" class="table is-embed is-fullwidth align-self-flex-start text-grey">
 <% cart.find_items(production.brother_ids, good_type: production.base_class_name, **options).each do |item| %>
   <tr data-id="<%= item.id %>">
-    <td><%= item.good.name %></td>
+    <td>
+      <% if item.good_id == production.id %>
+        <i class="fa-solid fa-fw fa-check text-success"></i>
+      <% else %>
+        <i class="px-3"></i>
+      <% end %>
+      <span><%= item.good.name %></span>
+    </td>
     <td>
       <ul class="media-info display-inline-flex">
         <% item.good.production_parts.includes(:part).each do |production_part| %>
@@ -14,7 +21,10 @@
         <% end %>
       </ul>
     </td>
-    <td class="text-right"><%= item.number.to_human %></td>
+    <td class="text-right">
+      <span><%= item.number.to_human %></span>
+      <span class="text-grey-light">份</span>
+    </td>
   </tr>
 <% end %>
 </table>
