--- a/app/views/application/_product_summary.html.erb
+++ b/app/views/application/_product_summary.html.erb
@@ -14,7 +14,7 @@
         <% item.good.production_parts.includes(:part).each do |production_part| %>
           <li>
             <span><%= production_part.part.name %></span>
-            <% if production_part.number.to_i >= 1 %>
+            <% if production_part.number.to_i > 1 %>
               <span>(<%= production_part.number %>)</span>
             <% end %>
           </li>
