--- a/app/views/application/_product_summary.html.erb
+++ b/app/views/application/_product_summary.html.erb
@@ -7,7 +7,7 @@
           <li>
             <span><%= production_part.part.name %></span>
             <% if production_part.number.to_i > 1 %>
-              <span>(<%= production_part.number %>)</span>
+              <span>x <%= production_part.number %></span>
             <% end %>
           </li>
         <% end %>
