--- a/app/views/application/_product_summary.html.erb
+++ b/app/views/application/_product_summary.html.erb
@@ -1,6 +1,6 @@
 <table id="product_summary_<%= production.product_id %>" class="table is-embed is-interval is-fullwidth align-self-flex-start text-grey">
 <% cart.find_items(production.brother_ids, good_type: production.base_class_name, **options).each do |item| %>
-  <tr data-id="<%= item.id %>">
+  <tr data-id="<%= item.id %>" style="background-color: <%= item.good_id == production.id ? '#eee' : 'white' %>">
     <td>
       <ul class="media-info display-inline-flex">
         <% item.good.production_parts.includes(:part).each do |production_part| %>
@@ -14,20 +14,7 @@
       </ul>
     </td>
     <td class="text-right">
-      <span><%= item.number.to_human %></span>
-      <span class="text-grey-light">份</span>
-    </td>
-    <td class="text-right" style="width: 6em; padding: 0">
-      <% if item.good_id == production.id %>
-        <div class="button is-small">
-          <i class="fa-solid fa-check text-success"></i>
-          <span class="ml-1">当前商品</span>
-        </div>
-      <% else %>
-        <%= button_to({ action: 'show', id: item.good_id }, params: { dispatch: params[:dispatch].presence || current_organ.dispatch }, class: 'button is-small is-rounded') do %>
-          <span>选择</span>
-        <% end %>
-      <% end %>
+      <%= render partial: 'cart_new', locals: { item: @cart.init_cart_item(params, good_id: production.id), item_con: 'trade/my/items', cart: @cart } %>
     </td>
   </tr>
 <% end %>
