--- a/app/views/application/_product_summary.html.erb
+++ b/app/views/application/_product_summary.html.erb
@@ -14,7 +14,7 @@
       </ul>
     </td>
     <td class="text-right">
-      <%= render partial: 'cart_new', locals: { item: @cart.init_cart_item(params, good_id: production.id), item_con: 'trade/my/items', cart: @cart } %>
+      <%= render partial: 'cart_new', locals: { item: @cart.init_cart_item(params, good_id: item.good_id), item_con: 'trade/my/items', cart: @cart } %>
     </td>
   </tr>
 <% end %>
